# oop_in_python

./: .gitignore  README.md  pyproject.toml
csv/: employee.csv
example/: class_structure.py  composition.py  encapsulation.py  polymorphism.py
json/: employee.json
loader/: __init__.py  csv.py  json.py
src/: csv_loader.py  json_loader.py  main.py  protocol.py  writer.py
src/loader/: __init__.py  csv.py  json.py
